tests/parser/bad/type_t-forall-tid-period-tid-with.scilla
scilla_version 0

library TestLib

let f : forall 'A. 'B. something = True

contract Test
()
